--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html>
 <html>
 
+<!-- ====================
+     HEAD
+   ==================== -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,23 +18,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-
-
-<!-- HEADER -->
+<!-- ====================
+     HEADER
+   ==================== -->
 
 <header class="header">
+
+    <!-- LOGO -->
     <div class="header_med_logo">
-        <img src="img/ragnalogo.jpg" alt="Ragna logo" /> <br>
+        <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
     </div>
+
+    <!-- header bild -->
     <div class="image_and_menu_container">
         <div class="header_bild_med_rubrik">
-            <img class="headerbild" src="/img/header 2.jpg" alt="header" />
-            <h1 class="rubriktext">
+            <img class="headerbild_index" src="/img/header 2.jpg" alt="header" />
+            
+            <!-- Rubrik-->
+            <h1 class="rubriktext_index">
                 Hej!<br>
                 Ragna Andersson<br>
                 UX Design student
             </h1>
         </div>
+
+<!-- ====================
+     NAV BAR
+   ==================== -->
+<!-- Vill ha en meny med dessa tre länkar till höger sen, vertikalt. Får se om vi kommer så långt att jag löser det. -->
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
             <div class="menu">
@@ -42,57 +57,89 @@
     </div>
 </header>
 
-<!-- BODY -->
+<!-- ====================
+     BODY
+   ==================== -->
 
 <body>
+    <div class="padding-1">
 
-    <!-- NAV-BAR -->
+        <!-- Rubrik-text -->
+        <div class="grid-container-2-col">
+            <section class="col2 row1">
+                <h3 class="left-align">
+                    Jag studerar UX Design på IT-Högskolan<br>
+                    i Göteborg.<br>
+                    Välkommen till min portfolio.
+                </h3>
+            </section>
+    <!-- ********************
+         PROJECT
+    ******************** -->
 
-    <!-- Vill ha en meny med dessa tre länkar till höger sen, vertikalt. Får se om vi kommer så långt att jag löser det. -->
+            <section class="col1-2 row2 grid-container-2-col">
+                <h1 class="col2">
+                    Projekt
+                </h1>
 
-    <section>
-        <h2>
-            Jag studerar UX Design på IT Högskolan<br>
-            i Göteborg.<br>
-            Välkommen till min portfolio.
-        </h2>
-    </section>
+                <!-- Reseplaneraren - Lättanvänd? -->
 
-    <!-- PROJECT -->
+                <div class="col1-2 row2 grid-container-2-col">
+                    <img class="col1 project_img" src="/img/projekt/prj1_hearts.png" alt="screenshot of västrafik app" />
 
-    <section>
-        <h1>
-            <i>Projekt</i>
-        </h1>
-    </section>
+                    <div class="col2">
+                        <h3 class="left-align">
+                            Reseplaneraren - Lättanvänd?
+                        </h3>
 
-    <section>
-        <img src="/img/projekt/prj1_hearts.png" alt="screenshot of västrafik app" />
+                        <p>
+                            Kan UX-research användas för att förbättra användarupplevelsen av Västtrafiks Reseplanerare? <br>
+                            Vilken viktig information framkommer från undersökningen för att optimera tjänsten?
+                        </p>
+                        <!-- Vet att man inte ska lägga saker som inte är aktiva synligt. Knappen går inte nånstans just nu. Men ville visa för dig att jag vet hur man gör en html knapp, inför att jag ska sminka den med css och koppla til projekt -->
+                        <button class="project_button">Läs mer 
+                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
 
-        <h3>
-            Reseplaneraren - Lättanvänd?
-        </h3>
+                <!-- Reseplaneraren - Hjärtknappar-->
 
-        <p>
-            Kan UX-research användas för att förbättra användarupplevelsen av Västtrafiks Reseplanerare? <br>
-            Vilken viktig information framkommer från undersökningen för att optimera tjänsten?
-        </p>
-        <!-- Vet att man inte ska lägga saker som inte är aktiva synligt. Knappen går inte nånstans just nu. Men ville visa för dig att jag vet hur man gör en html knapp, inför att jag ska sminka den med css och koppla til projekt -->
-        <button>Läs mer</button>
-    </section>
+                <div class="col1-2 row3 grid-container-2-col">
+                    <img class="col1 project_img" src="/img/projekt/togo.png" alt="screenshot of västrafik app" />
 
-    <br>
+                    <div class="col2">
+                        <h3 class="left-align">
+                            Reseplaneraren - Hjärtknappar
+                        </h3>
 
+                        <p>
+                            Genom att ta fram prototyper på tre förbättringsmöjligheter som framkommit genom tidigare användbarhetstester, förbättras tjänsten och gör den ännu mer användarvänlig. 
+                        </p>
+                        <!-- Vet att man inte ska lägga saker som inte är aktiva synligt. Knappen går inte nånstans just nu. Men ville visa för dig att jag vet hur man gör en html knapp, inför att jag ska sminka den med css och koppla til projekt -->
+                        <button class="project_button">Läs mer 
+                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </section>
+            <br>
+        </div>
+    </div>
 </body>
 
-<!-- FOOTER -->
+<!-- ====================
+     FOOTER
+   ==================== -->
 
-<footer>
+<footer class="footer padding-1">
 
-    <hr>
-
-    <img src="img/ragnalogo.jpg" alt="Ragna logo" /> <br>
-    <p class="footer_text">
+    <img  class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
+    <p>
         © Photos Ragna. Peas on earth!
     </p>
 
