--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <!-- ====================
@@ -26,13 +26,13 @@
 
     <!-- LOGO -->
     <div class="header_med_logo">
-        <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
+        <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     </div>
 
     <!-- header bild -->
     <div class="image_and_menu_container">
         <div class="header_bild_med_rubrik">
-            <img class="headerbild_index" src="/img/header 2.jpg" alt="header" />
+            <img class="headerbild_index" src="/assets/img/header 2.jpg" alt="header" />
             
             <!-- Rubrik-->
             <h1 class="rubriktext_index">
@@ -85,7 +85,7 @@
                 <!-- Reseplaneraren - Lättanvänd? -->
 
                 <div class="col1-2 row2 grid-container-2-col">
-                    <img class="col1 project_img" src="/img/projekt/prj1_hearts.png" alt="screenshot of västrafik app" />
+                    <img class="col1 project_img" src="/assets/img/projekt/prj1_hearts.png" alt="screenshot of västrafik app" />
 
                     <div class="col2">
                         <h3 class="left-align">
@@ -108,7 +108,7 @@
                 <!-- Reseplaneraren - Hjärtknappar-->
 
                 <div class="col1-2 row3 grid-container-2-col">
-                    <img class="col1 project_img" src="/img/projekt/togo.png" alt="screenshot of västrafik app" />
+                    <img class="col1 project_img" src="/assets/img/projekt/togo.png" alt="screenshot of västrafik app" />
 
                     <div class="col2">
                         <h3 class="left-align">
@@ -138,7 +138,7 @@
 
 <footer class="footer padding-1">
 
-    <img  class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
+    <img  class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     <p>
         © Photos Ragna. Peas on earth!
     </p>
