--- a/utbildning.html
+++ b/utbildning.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Ragna Portfolio Utbildning</title>
 </head>
 
@@ -12,11 +12,11 @@
 
 <header class="header">
     <div class="header_med_logo">
-        <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
+        <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     </div>
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
-            <img class="header_image_small" src="/img/header utbildning.jpg" alt="header" />
+            <img class="header_image_small" src="assets/img/header utbildning.jpg" alt="header" />
             <h1 class="header_text_centered">
                 Kurser
             </h1>
@@ -161,7 +161,7 @@
 </body>
 <footer class="footer padding-1">
     <p style="text-align: left;">© Photos Ragna. Peas on earth!</p>
-    <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" />
+    <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
 </footer>
 
 </html>
