--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Ragnas Portfolio CV</title>
 </head>
 
@@ -12,11 +12,11 @@
 
 <header class="header">
     <div class="header_med_logo">
-        <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" /> <br>
+        <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     </div>
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
-            <img class="header_image_small" src="/img/header 2.jpg" alt="header" />
+            <img class="header_image_small" src="/assets/img/header 2.jpg" alt="header" />
             <h1 class="header_text_centered">
                 CV
             </h1>
@@ -39,7 +39,7 @@
         </h1>
 
         <div class="grid-container-2-col">
-            <img class="col1 img-scale" src="img/ai_jag.jpg" alt="Ai rendered photo of Ragna">
+            <img class="col1 img-scale" src="assets/img/ai_jag.jpg" alt="Ai rendered photo of Ragna">
             <div class="col2 internship_info">
                 <h3 class="internship_header">
                     Jag söker praktikplats våren 2024!
@@ -158,7 +158,7 @@
 </body>
 <footer class="footer padding-1">
     <p>© Photos Ragna. Peas on earth!</p>
-    <img class="logo" src="img/ragnalogo.png" alt="Ragna logo" />
+    <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
 </footer>
 
 </html>
