Javascript för att visa projekt

--- a/index.html
+++ b/index.html
@@ -77,55 +77,11 @@
          PROJECT
     ******************** -->
 
-            <section class="col1-2 row2 grid-container-2-col">
+            <section id="projects" class="col1-2 row2 grid-container-2-col">
                 <h1 class="col2">
                     Projekt
                 </h1>
 
-                <!-- Reseplaneraren - Lättanvänd? -->
-
-                <div class="col1-2 row2 grid-container-2-col">
-                    <img class="col1 project_img" src="/assets/img/projekt/prj1_hearts.png" alt="screenshot of västrafik app" />
-
-                    <div class="col2">
-                        <h3 class="left-align">
-                            Reseplaneraren - Lättanvänd?
-                        </h3>
-
-                        <p>
-                            Kan UX-research användas för att förbättra användarupplevelsen av Västtrafiks Reseplanerare? <br>
-                            Vilken viktig information framkommer från undersökningen för att optimera tjänsten?
-                        </p>
-                        <!-- Vet att man inte ska lägga saker som inte är aktiva synligt. Knappen går inte nånstans just nu. Men ville visa för dig att jag vet hur man gör en html knapp, inför att jag ska sminka den med css och koppla til projekt -->
-                        <button class="project_button">Läs mer 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Reseplaneraren - Hjärtknappar-->
-
-                <div class="col1-2 row3 grid-container-2-col">
-                    <img class="col1 project_img" src="/assets/img/projekt/togo.png" alt="screenshot of västrafik app" />
-
-                    <div class="col2">
-                        <h3 class="left-align">
-                            Reseplaneraren - Hjärtknappar
-                        </h3>
-
-                        <p>
-                            Genom att ta fram prototyper på tre förbättringsmöjligheter som framkommit genom tidigare användbarhetstester, förbättras tjänsten och gör den ännu mer användarvänlig. 
-                        </p>
-                        <!-- Vet att man inte ska lägga saker som inte är aktiva synligt. Knappen går inte nånstans just nu. Men ville visa för dig att jag vet hur man gör en html knapp, inför att jag ska sminka den med css och koppla til projekt -->
-                        <button class="project_button">Läs mer 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
             </section>
             <br>
         </div>
@@ -144,5 +100,7 @@
     </p>
 
 </footer>
+
+<script type="text/javascript" src="./assets/js/projects.js"></script>
 
 </html>
