- menyn får understrykning på aktiv sida - header-bilden skalas till hela sidans bredd på index.html - menyn har fast position ute till höger

--- a/cv.html
+++ b/cv.html
@@ -23,8 +23,9 @@
         </div>
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
-            <div class="menu">
-                <a href="index.html">Hem</a>
+            <div id="menu">
+                <a href="index.html">hem</a>
+                <a href="cv.html">CV</a>
                 <a href="utbildning.html">Utbildning</a>
                 <a href="https://www.linkedin.com/in/ragna-andersson/" target="_blank">LinkedIn</a>
             </div>
@@ -160,5 +161,7 @@
     <p>© Photos Ragna. Peas on earth!</p>
     <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
 </footer>
+
+<script type="text/javascript" src="./assets/js/menu.js"></script>
 
 </html>
