--- a/utbildning.html
+++ b/utbildning.html
@@ -23,9 +23,10 @@
         </div>
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
-            <div class="menu">
-                <a href="index.html">Hem</a>
+            <div id="menu">
+                <a href="index.html">hem</a>
                 <a href="cv.html">CV</a>
+                <a href="utbildning.html">Utbildning</a>
                 <a href="https://www.linkedin.com/in/ragna-andersson/" target="_blank">LinkedIn</a>
             </div>
         </nav>
@@ -37,8 +38,7 @@
     <div class="padding-1">
         <section class="grid-container-2-col">
             <h2 class="col1">
-                Utbildning <br>
-                IT Högskolan kurser
+                IT Högskolan
             </h2>
             <div class="flex flex-column col1-2">
                 <article class="grid-container-2-col">
@@ -163,5 +163,7 @@
     <p style="text-align: left;">© Photos Ragna. Peas on earth!</p>
     <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
 </footer>
+
+<script type="text/javascript" src="./assets/js/menu.js"></script>
 
 </html>
