--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
    ==================== -->
 <!-- Vill ha en meny med dessa tre länkar till höger sen, vertikalt. Får se om vi kommer så långt att jag löser det. -->
         <nav class="menu_box">
-            <!-- <p>Meny</p> -->
-            <div class="menu">
+            <div id="menu">
+                <a href="index.html">hem</a>
                 <a href="cv.html">CV</a>
                 <a href="utbildning.html">Utbildning</a>
                 <a href="https://www.linkedin.com/in/ragna-andersson/" target="_blank">LinkedIn</a>
@@ -102,5 +102,6 @@
 </footer>
 
 <script type="text/javascript" src="./assets/js/projects.js"></script>
+<script type="text/javascript" src="./assets/js/menu.js"></script>
 
 </html>
