--- a/cv.html
+++ b/cv.html
@@ -67,9 +67,9 @@
 
             <div class="grid-container-2-col">
                 <article>
-                    <h5 class="right-align">
+                    <h4 class="right-align cv-duration-text">
                         2022-2024
-                    </h5>
+                    </h4>
                     <h3 class="right-align">
                         It Högskolan Göteborg <br>
                         UX Design
@@ -84,9 +84,9 @@
             </div>
             <div class="grid-container-2-col">
                 <article class="col2">
-                    <h5>
+                    <h4 class="cv-duration-text">
                         2021-2022
-                    </h5>
+                    </h4>
                     <h3>
                         Länsstyrelsen <br>
                         Handläggare jordbruksstöd
@@ -101,9 +101,9 @@
             </div>
             <div class="grid-container-2-col">
                 <article>
-                    <h5 class="right-align">
+                    <h4 class="right-align cv-duration-text">
                         2018-2020
-                    </h5>
+                    </h4>
                     <h3 class="right-align">
                         Stångby Plantskola <br>
                         Inköpare
@@ -120,9 +120,9 @@
             </div>
             <div class="grid-container-2-col">
                 <article class="col2">
-                    <h5>
+                    <h4 class="cv-duration-text">
                         2016-2018
-                    </h5>
+                    </h4>
                     <h3>
                         Trädgårdsakademin<br>
                         Arbetsledning grönyteförvaltning
@@ -137,9 +137,9 @@
             </div>
             <div class="grid-container-2-col">
                 <article>
-                    <h5 class="right-align">
+                    <h4 class="right-align cv-duration-text">
                         2009-212
-                    </h5>
+                    </h4>
                     <h3 class="right-align">
                         Sveriges Lantbruksuniversitet<br>
                         Trädgårdsingenjörsprogrammet
